[LDAP-36] #resolve